yaml/zakoduj/hashuj-zakoduj-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2022-01-26T00:00:23Z"
  labels:
    app: hashuj-zakoduj-deploy
  name: hashuj-zakoduj-svc
  namespace: labproj24
  resourceVersion: "80045595"
  uid: a9f5046e-152e-4985-9f3c-0f42d6bd5ce5
spec:
  clusterIP: 172.30.124.47
  clusterIPs:
  - 172.30.124.47
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 3002
    protocol: TCP
    targetPort: 3002
  selector:
    app: hashuj-zakoduj-deploy
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
